# tn5250

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: mingw64-amd64.toolchain  mingw64-i686.toolchain
devops/: qa  sonar
old/: Makefile  config.h  config.status  libtool  xt5250
old/curses/: Makefile  tn5250
old/curses/.deps/: tn5250-cursesterm.Po  tn5250-tn5250.Po
old/curses/.libs/: lt-tn5250  tn5250
old/doc/: Makefile
old/freebsd/: Makefile
old/lib5250/: Makefile  conf.lo  dbuffer.lo  debug.lo  display.lo  field.lo  lib5250.la  macro.lo  menu.lo  printsession.lo  record.lo  scrollbar.lo  scs.lo  session.lo  sslstream.lo  stream.lo  telnetstr.lo  terminal.lo  utility.lo  window.lo  wtd.lo
old/lib5250/.deps/: buffer.Plo  dbuffer.Plo  debug.Plo  field.Plo  telnetstr.Plo  terminal.Plo  version.Plo  wtd.Plo
old/lib5250/.libs/: lib5250.la  lib5250.lai
old/linux/: Makefile
old/lp5250d/: Makefile  lp5250d  scs2ascii  scs2pdf  scs2ps
old/lp5250d/.deps/: lp5250d.Po  scs2ascii.Po  scs2pdf.Po
old/lp5250d/.libs/: lp5250d  scs2ascii
old/python/: Makefile
old/slang/: Makefile
old/sun/: Makefile
old/win32/: Makefile
src/: config.h
src/lib5250/: buffer.c  buffer.h  codes5250.h  conf.c  conf.h  cursesterm.c  cursesterm.h  dbuffer.c  dbuffer.h  debug.c  debug.h  display.c  display.h  field.c  field.h  printsession.c  printsession.h  record.c  record.h  scs.c  scs.h  session.c  session.h  sslstream.c  stream.c  stream.h  telnetstr.c  terminal.h  tn5250-config.h  tn5250-private.h  tn5250.h  transmaps.h  utility.c  utility.h  wtd.c  wtd.h
src/lib5250/.deps/: conf.Plo  display.Plo  macro.Plo  menu.Plo  printsession.Plo  record.Plo  scrollbar.Plo  scs.Plo  session.Plo  sslstream.Plo  stream.Plo  utility.Plo  window.Plo
src/lib5250/.libs/: lib5250.so.0.0.0
src/lp5250d/: lp5250d.c  scs2ascii.c  scs2pdf.c  scs2ps.c
src/lp5250d/.deps/: scs2ps.Po
src/lp5250d/.libs/: scs2pdf  scs2ps
src/sdl5250/: Info.plist  sdl5250.c  sdlterm.c  sdlterm.h
src/tn5250/: tn5250.c
src/win32/: chonky.c  resource.h  tn5250-res.rc  tn5250-win.c  winterm.c
src/wx5250/: Info.plist  wx5250.cpp
